--- a/frontend/src/app/admin-dashboard/admin-dashboard.component.css
+++ b/frontend/src/app/admin-dashboard/admin-dashboard.component.css
@@ -1,5 +1,5 @@
 .dashboard-container {
-  max-width: 900px;
+  /* max-width: 900px; */
   margin: 30px auto;
   padding: 0 20px;
   padding-top: 60px;
