--- a/frontend/src/app/admin/admin-layout/admin-layout.component.css
+++ b/frontend/src/app/admin/admin-layout/admin-layout.component.css
@@ -4,8 +4,9 @@
   width: 100vw;
   background: #f5f6fa;
   overflow-x: auto;
-  margin-top: 74px;
-  height: calc(100vh - 74px);
+  /* margin-top: 74px; */
+  /* height: calc(100vh - 74px); */
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -18,10 +19,39 @@
   flex-direction: column;
   transition: width 0.3s ease;
   position: fixed;
-  top: 74px;
-  height: calc(100vh - 74px);
+  /* top: 74px; */
+  height: 100vh;
   z-index: 100;
+  top: 0px;
 }
+
+.container{
+  padding: 0px 30px;
+}
+
+.nav-actions {
+  display: flex;
+  gap: 8px;
+  padding: 10px 20px;
+  justify-content: flex-end;
+    /* background: linear-gradient(180deg, #004E92 0%, #000428 100%); */
+}
+
+.nav-actions button {
+  /* background: transparent; */
+  background: linear-gradient(180deg, #004E92 0%, #000428 100%);
+  border: 2px solid rgba(255, 255, 255, 0.6);
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.nav-actions button.active {
+  border-color: #FFD700;
+  color: #FFD700;
+}
+
 
 .sidebar-collapsed .sidebar {
   width: 70px;
@@ -58,12 +88,13 @@
   font-weight: 700;
   color: #004E92;
   background: #fff;
-  width: 36px;
-  height: 36px;
+  width: 100%;
+  /* height: 36px; */
   border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
+  display: none;
 }
 
 .toggle-btn {
@@ -178,7 +209,7 @@
 .main-content {
   flex: 1;
   margin-left: 250px;
-  padding: 30px;
+  /* padding: 30px; */
   transition: margin-left 0.3s ease;
   height: 100%;
   width: calc(100vw - 250px);
@@ -196,6 +227,10 @@
   .sidebar {
     width: 70px;
   }
+  .container{
+  padding: 0px 15px;
+}
+
 
   .sidebar .logo,
   .sidebar .user-info,
@@ -206,6 +241,10 @@
 
   .sidebar .logo-icon {
     display: flex;
+  }
+
+  .sidebar .logo{
+    display: none;
   }
 
   .sidebar .nav-item {
@@ -224,7 +263,7 @@
 
   .main-content {
     margin-left: 70px;
-    padding: 20px;
+    /* padding: 20px; */
     width: calc(100vw - 70px);
   }
 }
